[package]
name = "signed"
version = "0.1.0"
edition = "2021"

[dependencies]
exmex = { version = "0.19.0", features = ["value", "partial"] }
theframework = { path = "../TheFramework", features = ["ui"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vectorize = "0.2.0"
rust-embed = { version = "8", default-features = true, features = [
    "include-exclude",
] }
png = "0.17"
open = "5.0.1"
fontdue = "0.8.0"
rayon = "1"
maths-rs = { version = "0.2.6", features = [
    "short_types",
    "short_hand_constructors",
    "casts",
    "serde",
    "hash",
] }
rustc-hash = "1.1.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
    "js",
]
